<resources>
    <string name="app_name">Educational Game</string>
    <string name="action_settings">Settings</string>
    <string name="action_highscores">Scores</string>
    <string name="fullScreen_content">Application\nCONTENT</string>
    <string name="playGame_button">Proceed to Game</string>
    <string name="welcomeMessage">Welcome to the game</string>
    <string name="gameInfoMessage">
        Here you will be tested on your general knowledge!\n\n Type your name into the textfield
        followed by save to set your High Scores Name\n\n Click the Proceed to Game button to begin
        your learning experience.\n\nGood Luck!
    </string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="hiding_location">Hiding Location</string>
    <string name="createUser_button">SAVE</string>
    <string name="return_button">Return</string>
    <string name="button_false">FALSE</string>
    <string name="button_true">TRUE</string>

    <string name="title_activity_delete">delete</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_name">Enter Name :</string>
    <string name="action_playAgain">Play Again</string>
    <string name="play_again">Play Again</string>
    <string name="true_or_false">TRUE OR FALSE?</string>
</resources>
