<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.example.kyecook.educationalgame.GameScreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/true_or_false"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title.Media"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/questionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="60dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title.Media"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/true_handler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/button_true" />

            <Button
                android:id="@+id/false_handler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/button_false" />
        </LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
            android:id="@+id/returnButtonHandler"
            style="?metaButtonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_button"
            android:textSize="20sp"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
